# Kondesator

./: CMakeLists.txt  kondensator.cpp  kondensator.h  main.cpp
